syntax = "proto3";

import "google/protobuf/timestamp.proto";

package user;
option go_package = "github.com/smartmemos/memos/internal/proto/model/user";

message Stats {
  // The name of the user.
  string name = 1;

  // The timestamps when the memos were displayed.
  // We should return raw data to the client, and let the client format the data with the user's timezone.
  repeated google.protobuf.Timestamp memo_display_timestamps = 2;

  // The stats of memo types.
  MemoTypeStats memo_type_stats = 3;

  // The count of tags.
  // Format: "tag1": 1, "tag2": 2
  map<string, int32> tag_count = 4;

  // The pinned memos of the user.
  repeated string pinned_memos = 5;

  int32 total_memo_count = 6;

  message MemoTypeStats {
    int32 link_count = 1;
    int32 code_count = 2;
    int32 todo_count = 3;
    int32 undo_count = 4;
  }
}